[package]
name = "shc"
version = "0.0.1"
authors = ["XtremeDevX <xtremedevx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.2", features = ["blocking"] }
ansi_term = "0.12.1"
colored = "2.0.0"
serde_json = { version = "1.0.64" }
indicatif = "0.16.2"
# scraper = "0.12.0"
termimad = "0.10.2"
fuzzy-matcher = "0.3.7"
serde = { version = "1.0.126", features = ["derive"] }