[package]
name = "shc"
version = "0.0.1"
authors = ["XtremeDevX <xtremedevx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minreq = "2.4.2"
ansi_term = "0.12.1"
colored = "2.0.0"
serde_json = "1.0.64"
indicatif = "0.16.2"
termimad = "0.11.1"
difflib = "0.4.0"
serde = { version = "1.0.126", features = ["derive"] }
home = "0.5.3"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
