[package]
name = "shc-installer"
version = "0.1.0"
authors = ["XtremeDevX <xtremedevx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.2"
ansi_term = "0.12.1"
colored = "2.0.0"
indicatif = "0.15.0"
failure = "0.1.8"
exitfailure = "0.5.1"
